2004-11-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.schemas.in: Fix closing tag.

2004-10-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* .cvsignore: 
	* gnotski.schemas.in:
	* Makefile.am: Add a schema for the gconf keys.

2004-10-30  Richard Hoelscher  <rahga@rahga.com>

	* gnotski.c: Added scalability.
	WEP puzzle 2-7 and 3-3 now works, and 3-8 "Sunshine" added.
	The only WEP Klotski puzzle missing, 1-8, is incompatible
	with the theme file and has been deleted from source.
	Most WEP puzzles had their pointless "outside" areas removed.
	Several real-life puzzles added: Block 10 and Climb Pro 24.
	(main): Add gconf for window size, merge with create_window().
	(gui_draw_pixmap): Replace TILE_SIZE with tile_size, etc.
	(configure_pixmaps),(configure_pixmaps_idle): Re-draw the theme
	pixbuf after non-idle Gtk+ events.
	(create_space): Move the drawing area into a aspect frame.
	(prepare_map): Remove "G" level, prepare for a fix to #87886
	(configure_space),(window_resize_cb): Support window resizing.
	* gnotski.svg, Makefile.am: New theme file.
	* pieces.h: Partial t-block (pointing upward) theme support.

2004-03-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotski.xml: Updated version number for 2.6.

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c (load_image): Remove references to _has_separator when
	dealing with message dialogs

2003-10-30  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Consolidated the score file
	lists under a variable.

2003-10-09  Stanislav Brabec  <sbrabec@suse.cz>

	* help/C/gnotski-C.omf: Fixed typo in DOCTYPE (bug 106719).

2003-08-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotski.xml: Updates for 2.4, including screenshots.

2003-07-10  Callum McKenzie  <callum@physics.otago.ac.nz>
