@@ -36,7 +36,7 @@ EXTRA_DIST = README $(Games_in_files) $(pixmap_DATA) $(schema_in_files)
 
 CLEANFILES = $(Games_DATA)
 
-SCOREFILES = 1 2 3 4 5 6 7 11 12 13 14 15 16 17 21 22 23 24 25 26
+SCOREFILES = 1 2 3 4 5 6 7 11 12 13 14 15 16 17 18 21 22 23 24 25 26 27 28 30 31 32 33 34 35 36 37 38 39 40
 
 install-data-local:
 if GCONF_SCHEMAS_INSTALL
